# charm-keystone

./: .gitignore  .gitreview  .pydevproject  Makefile  README.md  actions.yaml  charm-helpers-hooks.yaml  charm-helpers-tests.yaml  config.yaml  metadata.yaml  setup.cfg  test-requirements.txt  tox.ini
actions/: actions.py  openstack_upgrade.py  security_checklist.py
charmhelpers/core/: hookenv.py
hooks/: keystone_context.py  keystone_hooks.py  keystone_types.py  keystone_utils.py  manager.py  uds_comms.py
scripts/: fernet_rotate_and_sync.py
templates/: keystone-fernet-rotate-sync  openstack_https_frontend.conf  ports.conf  wsgi-openstack-api.conf
templates/icehouse/: keystone.conf
templates/kilo/: keystone.conf
templates/mitaka/: keystone.conf  policy.json
templates/newton/: policy.json
templates/ocata/: keystone.conf  policy.json
templates/queens/: keystone.conf  policy.json
templates/rocky/: keystone.conf  policy.json
tests/: basic_deployment.py  dev-basic-bionic-queens  dev-basic-bionic-rocky  dev-basic-cosmic-rocky  dev-basic-xenial-queens  tests.yaml
tests/bundles/: bionic-queens.yaml  bionic-rocky.yaml  bionic-stein.yaml  bionic-train.yaml  bionic-ussuri.yaml  cosmic-rocky.yaml  disco-stein.yaml  focal-ussuri.yaml  focal-victoria.yaml  groovy-victoria.yaml  trusty-icehouse.yaml  trusty-mitaka.yaml  (+4 more)
unit_tests/: __init__.py  test_actions.py  test_actions_git_reinstall.py  test_actions_openstack_upgrade.py  test_keystone_contexts.py  test_keystone_hooks.py  test_keystone_utils.py  test_scripts_fernet_rotate_and_sync.py  test_utils.py
(+3 files in other folders)
